verificación de usuarios

--- a/views/index.pug
+++ b/views/index.pug
@@ -33,7 +33,7 @@ block content
             | Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
             a(href='https://startbootstrap.com/theme/grayscale/') the preview page
             |                             . The theme is open source, and you can use it for any purpose, personal or commercial.
-      img.img-fluid(src='/stylesheets/assets/img/ipad.png' alt='...')
+      img.img-fluid(src='stylesheets/assets/img/ipad.png' alt='...')
   // Projects
   section#projects.projects-section.bg-light
     .container
@@ -66,14 +66,14 @@ block content
               h4.text-uppercase.m-0 Email
               hr.my-4
               .small.text-black-50
-                a(href='#!') hello@yourdomain.com
+                a(href='#!') yulianacastrodiaz7@gmail.com
         .col-md-4.mb-3.mb-md-0
           .card.py-4.h-100
             .card-body.text-center
               i.fas.fa-mobile-alt.text-primary.mb-2
               h4.text-uppercase.m-0 Phone
               hr.my-4
-              .small.text-black-50 +1 (555) 902-8832
+              .small.text-black-50 +57 301 5226994
       .social.d-flex.justify-content-center
         a.mx-2(href='#!')
           i.fab.fa-twitter
