--- a/views/Bicicletas/index.pug
+++ b/views/Bicicletas/index.pug
@@ -1,28 +1,32 @@
-extends ../layout
-block content
-    a(href="/bicicletas/create") Create
-    table.table
-        thead
-            tr
-                th(scope='col') #
-                th(scope='col') Color
-                th(scope='col') Modelo
-                th(scope='col') Ubicacion
-                th(scope='col')
-                th(scope='col')
-        tbody
-            each bici in bicis
-                tr
-                    td(scope='row')
-                        = bici.id
-                    td= bici.color
-                    td= bici.model
-                    td= bici.ubicacion
-                    td
-                        a(href='bicicletas/' + bici.id + '/update') Update
-                    td
-                        form.inLine(method='post' action='bicicletas/' + bici.id + '/delete')
-                            input(type='hidden' name='code' value=bici.id)
-                            button.link-button(type='submit' name='submit_param' value='submit_value' class='btn')
-                                = 'Delete'
-                                
+extends ../layout 
+
+block content 
+  a(href='/bicicletas/create') Nueva Bicicleta
+
+    table.table 
+     thead
+      tr
+        th(scope='col') #
+        th(scope='col') Color
+        th(scope='col') Modelo
+        th(scope='col') Ubicación
+        th(scope='col')
+        th(scope='col')
+     tbody
+      each bici in bicis
+        tr
+         th(scope='row') 
+           = bici.id 
+         td= bici.color 
+         td= bici.modelo 
+         td= bici.ubicacion 
+         td 
+           a(href='bicicletas/' + bici.id + '/update') Editar
+         td 
+           form.inline(method='post' action='bicicletas/' + bici.id + '/delete')
+              input(type='hidden' name='id' value= bici.id)
+              button.link-button(type='submit' name='submit_param' value='submit_value' class='btn')
+                ='Eliminar'  
+
+    
+    
